atualizado os cadastros pois nao estava buscando os professores e alunos no banco de dados.